--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -3,49 +3,58 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:weightSum="1"
     android:orientation="horizontal"
-    android:padding="16dp"
-    >
 
-    <ImageView
-        android:id="@+id/list_item_icon"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_weight="0"
-        />
+    android:background="@drawable/touch_selector">
+
+    <FrameLayout
+        android:layout_width="60dp"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/list_item_icon"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+    </FrameLayout>
+
 
     <LinearLayout
+        android:layout_weight="7"
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/list_item_date_textview"
             android:text="@string/today"
+            android:fontFamily="sans-serif-condensed"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/list_item_forecast_textview"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/weather"
+            android:fontFamily="sans-serif-condensed"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_weight="0"
+        android:layout_width="0dp"
+        android:layout_weight="5"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/list_item_high_textview"
             android:text="@string/max_temp"
+            android:fontFamily="sans-serif-condensed"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -53,10 +62,11 @@
         <TextView
             android:id="@+id/list_item_low_textview"
             android:text="@string/min_temp"
+            android:fontFamily="sans-serif-condensed"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-
 
 </LinearLayout>
