--- a/app/src/main/res/layout/fragment_detail_wide.xml
+++ b/app/src/main/res/layout/fragment_detail_wide.xml
@@ -21,14 +21,22 @@
             android:padding="@dimen/activity_vertical_margin">
 
             <TextView
+                android:fontFamily="sans-serif-condensed"
                 android:id="@+id/detail_day_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:minWidth="120dp"
+                android:textSize="24sp" />
+
 
             <TextView
+                android:fontFamily="sans-serif-condensed"
                 android:id="@+id/detail_date_textview"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey_700"
+                android:textSize="20sp" />
+
 
         </LinearLayout>
 
@@ -40,18 +48,21 @@
 
 
             <TextView
+                android:fontFamily="sans-serif-condensed"
                 android:id="@+id/detail_high_textview"
-                android:textSize="?android:attr/textAppearanceLarge"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="96sp" />
 
             <TextView
                 android:id="@+id/detail_low_textview"
-                android:textSize="?android:attr/textAppearanceMedium"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey_700"
+                android:textSize="48sp" />
+
 
             <LinearLayout
                 android:orientation="vertical"
@@ -59,16 +70,22 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:fontFamily="sans-serif-condensed"
+                    android:textAppearance="?android:textAppearanceLarge"
                     android:id="@+id/detail_humidity_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:fontFamily="sans-serif-condensed"
+                    android:textAppearance="?android:textAppearanceLarge"
                     android:id="@+id/detail_wind_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:fontFamily="sans-serif-condensed"
+                    android:textAppearance="?android:textAppearanceLarge"
                     android:id="@+id/detail_pressure_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
@@ -92,11 +109,14 @@
                 android:src="@drawable/ic_launcher" />
 
             <TextView
+                android:fontFamily="sans-serif-condensed"
                 android:id="@+id/detail_forecast_textview"
                 android:text="@string/weather"
-
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="@color/grey_700" />
+
         </LinearLayout>
 
     </LinearLayout>
