--- a/app/src/main/res/xml/pref_genereal.xml
+++ b/app/src/main/res/xml/pref_genereal.xml
@@ -6,9 +6,17 @@
         android:defaultValue="@string/pref_location_default"
         android:inputType="text"
         android:singleLine="true" />
-    <ListPreference android:title="@string/pref_unit_label"
+    <ListPreference
+        android:title="@string/pref_unit_label"
         android:key="@string/pref_unit_key"
         android:entries="@array/pref_unit_entries"
         android:entryValues="@array/pref_unit_entry_values"
-        android:defaultValue="@string/pref_unit_default"/>
+        android:defaultValue="@string/pref_unit_default" />
+    <CheckBoxPreference
+        android:title="@string/pref_enable_notifications_label"
+        android:key="@string/pref_enable_notifications_key"
+        android:summaryOff="@string/pref_enable_notifications_false"
+        android:summaryOn="@string/pref_enable_notifications_true"
+        android:defaultValue="@string/pref_enable_notifications_default" />
+
 </PreferenceScreen>
